--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -16,6 +16,7 @@
 
 <title>Home - Smart Contact Manager</title>
 <link rel="stylesheet" th:href="@{/css/style.css}" />
+<script type="text/javascript" th:src="@{/js/script.js}"></script>
 </head>
 <body>
 
