--- a/src/main/resources/templates/User/show_individual_contact.html
+++ b/src/main/resources/templates/User/show_individual_contact.html
@@ -31,11 +31,11 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <th scope="row" th:text="${contact.contact_id}"></th>
-                            <td th:text="${contact.contact_name}"></td>
-                            <td th:text="${contact.email}"></td>
-                            <td th:text="${contact.contact_number}"></td>
-                            <td th:text="${contact.contact_designation}"></td>
+                            <th style="text-align: left;" scope="row" th:text="${contact.contact_id}"></th>
+                            <td style="text-align: left;" th:text="${contact.contact_name}"></td>
+                            <td style="text-align: left;" th:text="${contact.email}"></td>
+                            <td style="text-align: left;" th:text="${contact.contact_number}"></td>
+                            <td style="text-align: left;" th:text="${contact.contact_designation}"></td>
                         </tr>
                     </tbody>
                 </table>
