--- a/src/main/resources/templates/User/show_individual_contact.html
+++ b/src/main/resources/templates/User/show_individual_contact.html
@@ -22,20 +22,20 @@
                 <table class="table mt-4">
                     <thead class="thead-light">
                         <tr>
-                            <th scope="col">Contact ID</th>
-                            <th scope="col">Name</th>
-                            <th scope="col">Email</th>
-                            <th scope="col">Number</th>
-                            <th scope="col">Designation</th>
+                            <th style="text-align: center;" scope="col">Contact ID</th>
+                            <th style="text-align: center;" scope="col">Name</th>
+                            <th style="text-align: center;" scope="col">Email</th>
+                            <th style="text-align: center;" scope="col">Number</th>
+                            <th style="text-align: center;" scope="col">Designation</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <th style="text-align: left;" scope="row" th:text="${contact.contact_id}"></th>
-                            <td style="text-align: left;" th:text="${contact.contact_name}"></td>
-                            <td style="text-align: left;" th:text="${contact.email}"></td>
-                            <td style="text-align: left;" th:text="${contact.contact_number}"></td>
-                            <td style="text-align: left;" th:text="${contact.contact_designation}"></td>
+                            <th style="text-align: center;" scope="row" th:text="${contact.contact_id}"></th>
+                            <td style="text-align: center;" th:text="${contact.contact_name}"></td>
+                            <td style="text-align: center;" th:text="${contact.email}"></td>
+                            <td style="text-align: center;" th:text="${contact.contact_number}"></td>
+                            <td style="text-align: center;" th:text="${contact.contact_designation}"></td>
                         </tr>
                     </tbody>
                 </table>
