--- a/src/main/resources/templates/User/base.html
+++ b/src/main/resources/templates/User/base.html
@@ -30,6 +30,22 @@
 <link rel="stylesheet" th:href="@{/css/style.css}" />
 <script
 	src="https://cdn.ckeditor.com/ckeditor5/36.0.1/classic/ckeditor.js"></script>
+	
+	<!-- <style>
+        body {
+            background: url('/images/sample_image.png') no-repeat center center fixed;
+            background-size: cover;
+        }
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.3); /* Adjust opacity (0.0 to 1.0) */
+            z-index: -1; /* Place the overlay behind the content */
+        }
+    </style> -->
 </head>
 <body>
 
