--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,12 +28,12 @@
 							<form th:action="@{/login}" action="#" method="post">
 								<div class="form-group">
 									<label for="exampleInputEmail1">Email address</label> <input
-										type="email" name="username" class="form-control" id="email"
+										type="email" required="" name="username" class="form-control" id="email"
 										aria-describedby="emailHelp" placeholder="Enter email">
 								</div>
 								<div class="form-group">
 									<label for="exampleInputEmail1">Password</label> <input
-										type="password" name="password" id="password"
+										type="password" required="" name="password" id="password"
 										class="form-control" aria-describedby="emailHelp"
 										placeholder="Enter Password">
 								</div>
